--- a/game-challenge/hidden/src/index.html
+++ b/game-challenge/hidden/src/index.html
@@ -15,6 +15,7 @@
 
 	<script type="text/javascript" src = "./phaser.js"></script>
 	<script type="module" src = "./main.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
 
 </head>
