--- a/game-challenge/skill/src/index.html
+++ b/game-challenge/skill/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
 	<title>EPPSA - Skill game</title>
 	<script src="/socket.io/socket.io.js"></script>
-	   <!--<script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.js"></script>-->
-	   <script src="/js/phaser.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+	<script src="/js/phaser.js"></script>
 </head>
 <body>
 <div id="game"></div>
