--- a/game-challenge/graph/src/index.html
+++ b/game-challenge/graph/src/index.html
@@ -4,13 +4,15 @@
 	<!--<meta charset="UTF-8" name= "viewport" content ="width= device.width, initial-scale = 1, maximum-scale=1, minimum-scale=1,user.scalable=no"/>-->
 	<meta charset="UTF-8"/>
 	<title>EPPSA - Graph Game</title>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
 	   <script src="/phaser.js"></script>
 </head>
 <body>
 <div id="game"></div>
 <script src="/nodes.js"></script>
 <script src="/agents.js"></script>
-<script src="/game.js"></script>
+<script type="module" src="/game.js"></script>
 <style>
 	body{
 		margin: 0;
