--- a/game-challenge/graph/src/index.html
+++ b/game-challenge/graph/src/index.html
@@ -12,7 +12,7 @@
 <div id="game"></div>
 <script src="/nodes.js"></script>
 <script src="/agents.js"></script>
-<script type="module" src="/game.js"></script>
+<script src="/game.js"></script>
 <style>
 	body{
 		margin: 0;
