--- a/game-challenge/clicker/src/index.html
+++ b/game-challenge/clicker/src/index.html
@@ -3,6 +3,8 @@
 <head>
 
 	<meta charset="utf-8" name= "viewport" content = "width= device.width, initial-scale = 1, maximum-scale=1, minimum-scale=1,user.scalable=no" />
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
 
 	<style>
 	*{
