test push with new configs

--- a/game-challenge/hidden/src/index.html
+++ b/game-challenge/hidden/src/index.html
@@ -3,8 +3,6 @@
 <head>
 	
 	<meta charset="utf-8" name= "viewport" content = "width= device.width, initial-scale = 1, maximum-scale=1, minimum-scale=1,user.scalable=no" />
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
 
 	<title>Match Game</title>
 
@@ -16,7 +14,7 @@
 	</style>
 
 	
-	<script type="module" src = "./main.js"></script>
+	<!--<script type="module" src = "./main.js"></script>-->
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
 
