changed arrow, showing counter on screen, added correct font, cleanup

--- a/game-challenge/astragal/src/index.html
+++ b/game-challenge/astragal/src/index.html
@@ -6,23 +6,17 @@
       <meta name="description" content="Astragal">
         <meta name="author" content="Mischa Krempel">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-          <!--<link rel="stylesheet" href="./styles.css">-->
-
-          <!--<script src="three.min.js"></script>-->
-          <!--<script src="jquery-3.3.1.min.js"></script>-->
-          <!--<script src="./jquery.touch.js"></script>-->
-          <!--<script src="main.js"></script>-->
-          </head>
+</head>
 
           <body onpointerdown="" onpointermove="" onpointerup="" >
+            <div id=count>
+              <span class="count" id="current"></span><span class="count" id="max"></span>
+            </div>
             <div id="head">
-            <h1 id="result" class="info"> Werfe den Astragal.  </h1>
-            <h2 id="points" class="info"> </h2>
+              <h1 id="result" class="info"></h1>
+              <h2 id="points" class="info"> </h2>
             </div>
             <div id="main" onpointerdown="" onpointermove="" onpointerup="" > </div>
-            <img class="arrow" id="arrowLeft"> </img> 
-
-            <img class="arrow" id="arrowRight"> </img> 
+            <img class="arrow" id="arrowLeft" src="/images/arrowsAstragal.png"> </img> 
          </body>
 </html>
