--- a/game-challenge/astragal/src/index.html
+++ b/game-challenge/astragal/src/index.html
@@ -10,12 +10,13 @@
 
           <body onpointerdown="" onpointermove="" onpointerup="" >
             <div id=count>
-              <span class="count" id="current"></span><span class="count" id="max"></span>
+              <span class="count" id="current"></span>
             </div>
             <div id="head">
               <h1 id="result" class="info"></h1>
               <h2 id="points" class="info"> </h2>
             </div>
+            <img id="arrowUp" src="/images/arrowUp.png">
             <div id="main" onpointerdown="" onpointermove="" onpointerup="" > </div>
             <img class="arrow" id="arrowLeft" src="/images/arrowsAstragal.png"> </img> 
          </body>
